--- a/sass/main.scss
+++ b/sass/main.scss
@@ -125,6 +125,9 @@ body {
         }
 
         &-logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-right: 2rem;
         }
 
